@@ -7,6 +7,9 @@ CHANGELOG
 	  choosing moves.
 	* Dynamically generate about dialog.
 	* Fix bug loading UCI games.
+	* Catch exceptions when reading from chess engines.
+	* Ignore escaped PGN data - this allows the loading of games from the
+	  Knights chess interface.
 
 2006-12-01  Robert Ancell  <bob27@users.sourceforge.net>
 	* Added configuration module that uses GConf when available
